# ml

./: .pdm-python  pyproject.toml
credit_dashboard/: .pdm-python  app.py  app.yaml  pyproject.toml  requirements.txt
credit_dashboard/static/: app.js  styles.css
credit_dashboard/templates/: index.html
data/: data ingestion.py  data pre-processing.py
model/: Clasification_model.py  RF_model.py  Random_forest_final_model.py
